fix modal z-index

--- a/src/shared/ui/modals/default-modal/style.css
+++ b/src/shared/ui/modals/default-modal/style.css
@@ -1,7 +1,7 @@
 .default-modal {
     position: fixed;
     left: 0;
-    z-index: 999;
+    z-index: 999999;
     top: 0;
     width: 100%;
     height: 100%;
